--- a/src/webapp/WEB-INF/html/admin/test.html
+++ b/src/webapp/WEB-INF/html/admin/test.html
@@ -7,17 +7,22 @@
 
 <body>
 
-<button id="test" value="submit" style="width: 10px">submit</button>
+<button id="test" value="submit" style="width: auto">submit</button>
   <script type="text/javascript">
       $("#test").click(function(){
-          var testData={"pointIds": ['41607','32269'], "startDate": "2019-04-30 00:01:00","endDate":"2019-05-01 02:14:0"}
+          var faultList=[];
+          var testData={"dataPointIds": ['41607','32269'], "startDate": "2019-04-30 00:01:00","endDate":"2019-05-01 02:14:0"};
+          faultList.push(testData);
           $.ajax({
               type:"POST",
               url: "/diaisheng/valueadmin/getdatabetweendate",
               dataType:"json",
               contentType:"application/x-www-form-urlencoded", // 指定这个协议很重要
-              data:testData, //只有这一个参数，json格式，后台解析为实体，后台可以直接用
+              data:faultList, //只有这一个参数，json格式，后台解析为实体，后台可以直接用
               success:function(data){
+              },
+              error:function(err){
+                  console.log(err);
               }
           });
       })
